cleaned up some stuff in student.ipynb

--- a/student.ipynb
+++ b/student.ipynb
@@ -7,23 +7,11 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Student name: Moses Lin\n",
-    "Student pace: Full Time\n",
-    "Scheduled project review date/time: 5/29/20 at 1:30pm EST to 3:00pm EST\n",
-    "Instructor name: fangfang"
+    "* Student name: Moses Lin\n",
+    "* Student pace: Full time\n",
+    "* Scheduled project review date/time: 5/29/20 at 1:30pm EST to 3:00pm EST\n",
+    "* Instructor name: fangfang\n",
+    "* Blog post URL: N/A\n"
    ]
   },
   {
@@ -214,7 +202,7 @@
     }
    ],
    "source": [
-    "#importing file from zippedData\n",
+    "#importing file from zippedData and converting to dataframe\n",
     "tn_df = pd.read_csv('zippedData/tn.movie_budgets.csv.gz')\n",
     "tn_df.head(-1)"
    ]
@@ -3693,7 +3681,8 @@
     }
    ],
    "source": [
-    "#changing <Response [200]> into something that can be more easily removed later\n",
+    "#changing <Response [200]> into string so it can be more easily removed later\n",
+    "#used type() to determine that it was not a list\n",
     "new_response_list = [\"NULL\" if type(x) != list else x for x in response_list]\n",
     "new_response_list"
    ]
@@ -4715,7 +4704,7 @@
     }
    ],
    "source": [
-    "#changing lists into strings for easier handling later.\n",
+    "#concatenating items in lists to strings for easier handling later.\n",
     "newer_response_list = []\n",
     "for x in new_response_list:\n",
     "    newer_response_list.append(','.join(map(str, x)))\n",
@@ -4949,6 +4938,7 @@
    ],
    "source": [
     "#Adding genre to each movie within the last 10 years\n",
+    "#make new clean dataframe without nulls\n",
     "tn_df_recent10['genre'] = newer_response_list\n",
     "tn_df_clean10 = tn_df_recent10[tn_df_recent10['genre'] != 'N,U,L,L' ]\n",
     "tn_df_clean10"
@@ -5524,6 +5514,7 @@
     "#The value for worldwide profit of a certain genre is stored and summed in the fresh dictionary created at the start.\n",
     "#if statement to add value to existing genre in dict, else statement is for entering new genre entry.\n",
     "#the profit average column is added by taking list of sum and dividing each sum by respective counts.\n",
+    "\n",
     "unique_genres = list(genre_dict_copy.keys())\n",
     "\n",
     "genre_profit_dict = {}\n",
@@ -5769,13 +5760,6 @@
     "plt.ylabel('Worldwide Profit', fontsize =(20))\n",
     "plt.title('Top Profitable Movie Genres over the last 10 years', fontsize = (25))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
